refactor: format and fix bugs :recycle: